--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,12 +28,26 @@
       </ul>
         
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Log In</a></li>
+        <% if user_signed_in? %>
+          <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
+        <% else %>
+          <li><%= link_to 'Log in', new_user_session_path %></li>
+          <li><%= link_to 'Sign up', new_user_registration_path %></li>
+        <% end %>
       </ul>
     </div><!-- /.navbar-collapse -->
   </div><!-- /.container-fluid -->
   </nav>
-<nav class="navbar navbar-inverse navbar-fixed-bottom">
+  <!-- Alert user when log in successful or failed -->
+  <% if notice.present? %>
+    <p class="notice"><%= "User successfully signed in" %></p>
+  <% end %>
+  <% if alert.present? %>
+    <p class="alert alert-info"><%= "User credentials invalid" %></p>
+  <% end %>
+  <nav class="navbar navbar-inverse navbar-fixed-bottom">
+
+  <!-- Sticky footer -->
 	<div class="container footer-columns">
 		<ul class="column1">
 			<li class="title">Teachers</li>
@@ -53,8 +67,7 @@
 	</div>
 </nav>
 
-		<%= yield %>
-  
+<%= yield %>
 
 </body>
 </html>
