--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -87,9 +87,13 @@ h1, h2, h3, h4, h5, h6, .navbar {
   border: 1px solid #ccc;
   border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
   padding: 10px;
+	}
 }
 
 .booyah-box h2, .booyah-box h1 {
 	margin: 10px;
 }
+
+.clr {
+	clear: both;
 }
