--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -10,7 +10,7 @@
 		<% if current_user && current_user == @course.user %>
 			<br/>
 			<br/>
-			<%= link_to 'Administer', instructor_course_path(@course), :class => 'btn btn-danger btn-large' %>
+			<%= link_to 'Administrator', instructor_course_path(@course), :class => 'btn btn-danger btn-large' %>
 			<% end %>
 	</div>
 
