Added lessons page for user and index page for instr/courses

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,7 @@
     <ul class="column1 col-sm-4">
       <li class="title">Teachers</li>
       <li><%= link_to 'Teach a Course', new_instructor_course_path %></li>
-      <li><a href="#">View Dashboard</a></li>
+      <li><%= link_to 'Dashboard', instructor_courses_path %></li>
     </ul>
     <ul class="column2 col-sm-4">
       <li class="title">About</li>
