--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -6,9 +6,9 @@
 
 	<div class="frosty col-xs-10 col-xs-offset-1 text-center">
 		<br/>
-		<h1>Learn Magic from the Pros</h1>
+		<h1>Imparting Knowledge From a New Perspective</h1>
 		<br/>
-		<h2>I'm an illusionist, Michael.</h2>
+		<h2>Lessons from our children</h2>
 		<br/>
 		<%= link_to 'Learn More', courses_path, :class => 'btn btn-success' %>
 		<br/><br/>
