--- a/app/views/courses/show.html.erb
+++ b/app/views/courses/show.html.erb
@@ -1,6 +1,7 @@
 <br/>
 <div class="booyah-box col-xs-10 col-xs-offset-1">
 	<h1><%= @course.title %></h1>
+	<%= image_tag @course.image, :class => 'img-responsive course-img' %>
 	<br/>
 	<div class="col-sm-4 col-xs-12 text-center">
 		<span class="label label-default">
@@ -33,4 +34,5 @@
 				<% end %>
 			</div>
 		<% end %>
+	</div>
 </div>
