--- a/app/views/instructor/courses/index.html.erb
+++ b/app/views/instructor/courses/index.html.erb
@@ -2,7 +2,8 @@
 <div class="booyah-box col-xs-10 col-xs-offset-1">
 	<h1 class="text-center">List of Your Courses Offered</h1>
 	<% @courses.each do |course| %>
-		<h2><%= link_to course.title, instructor_course_path(course) %></h2> 
+		<h2 class="text-center"><%= link_to course.title, instructor_course_path(course) %></h2>
+		<%= image_tag course.image, :class => 'img-responsive text-center' %> 
 	<% end %>
 
 	
