--- a/app/views/instructor/courses/new.html.erb
+++ b/app/views/instructor/courses/new.html.erb
@@ -5,6 +5,7 @@
 		<%= f.input :title %>
 		<%= f.input :description %>
 		<%= f.input :cost %>
+		<%= f.input :image, label: "Upload an image" %>
 		<br/>
 		<%= f.submit "Create", :class => 'btn btn-primary' %>
 		<br/>
