--- a/app/assets/stylesheets/instructor/sections.css.scss
+++ b/app/assets/stylesheets/instructor/sections.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the instructor/sections controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.section {
+	border: 1px solid;
+	border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+	padding: 20px;
+}
