--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -100,3 +100,40 @@ html, body {
   margin: 10px;
 }
 
+ul {
+  list-style-type: none;
+
+  .header {
+    font-size: 25px;
+
+    .glyphicon {
+      font-size: 20px;
+    }
+  }
+}
+
+.section-li {
+  border: 1px solid;
+  border-color: #e4e4e4 #bebebd #bebebd #e4e4e4;
+  padding: 20px;
+  margin: 20px;
+}
+
+.lessons li {
+  background: black;
+  color: white;
+  margin: 10px;
+  font-family: "Helvetica Neue", Helvetica;
+  font-weight: 100;
+  padding: 8px;
+  font-size: 15px;
+
+  b {
+    font-size: 25px;
+    font-weight: 100;
+  }
+
+  p {
+    margin: 0;
+  }
+}
