--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,7 @@
 </style>
 </head>
 <body>
-<div class="page-wrap"> 
+<div class="page-wrap">
 <nav class="navbar navbar-default" role="navigation">
   <div class="container-fluid">
     <!-- Brand and toggle get grouped for better mobile display -->
@@ -38,10 +38,10 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
       	<li>
-         <%= link_to 'See All Courses', courses_path %> 
+         <%= link_to 'See All Courses', courses_path %>
         </li>
       </ul>
-        
+
       <ul class="nav navbar-nav navbar-right">
         <% if user_signed_in? %>
           <li><%= link_to 'Sign out', destroy_user_session_path, :method => :delete %></li>
@@ -68,7 +68,7 @@
     <ul class="column1 col-sm-6">
       <li class="title">Teachers</li>
       <li><%= link_to 'Teach a Course', new_instructor_course_path %></li>
-      <li><%= link_to 'Dashboard', instructor_courses_path %></li>
+      <li><%= link_to 'My Dashboard', dashboard_path %></li>
     </ul>
     <ul class="column2 col-sm-6">
       <li class="title">About</li>
