--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -17,12 +17,12 @@
 <br/>
 <div class="col-xs-10 col-xs-offset-1 features text-center">
 	<div class="col-sm-4"
-		<h3>Feature 1</h3>
+		<h3>On Your Time</h3>
 	</div>
 	<div class="col-sm-4"
-		<h3>Feature 2</h3>
+		<h3>Where You Want</h3>
 	</div>
 	<div class="col-sm-4"
-		<h3>Feature 3</h3>
+		<h3>For the Right Price</h3>
 	</div>
 </div>
