--- a/app/views/instructor/courses/show.html.erb
+++ b/app/views/instructor/courses/show.html.erb
@@ -1,5 +1,11 @@
 <script>
 $(function() {
+	$('.new-lesson-button').click(function() {
+		var lessonUrl = $(event.target).data('lesson-url');
+		$('#newLessonForm').attr('action', lessonUrl);
+
+	});
+
 	$('.lessons').sortable({
 		update: function( event, ui ) {
       $.ajax({
@@ -11,8 +17,7 @@ $(function() {
       }
 	});
 });
-</script>
-<script>
+
 $(function() {
 	$('.sections').sortable({
 		update: function( event, ui ) {
@@ -34,7 +39,7 @@ $(function() {
 	<%= link_to 'Preview As Student...', course_path(current_course), :class => 'btn btn-warning pull-right' %>
 	<br class='clr'/>
 	<div class="text-center">
-		<!-- Button trigger modal -->
+		<!-- Button trigger modal - New Section -->
 		<button type="button" class="btn btn-primary btn-lg" data-toggle="modal" data-target="#newSectionModal">
 		  Add a new section...
 		</button>
@@ -48,7 +53,10 @@ $(function() {
 					<%= section.title %>
 				</div>
 				<br/>
-				<%= link_to 'New Lesson', new_instructor_section_lesson_path(section), :class => 'pull-right btn btn-primary btn-xs' %>
+				<!-- Button trigger modal - New Lesson -->
+				<button type="button" class="pull-right btn btn-primary btn-xs new-lesson-button" data-toggle="modal" data-target="#newLessonModal" data-lesson-url="<%= instructor_section_lessons_path(section) %>">
+		  		New lesson...
+				</button>
 				<br class="clr"/>
 				<br class="clr"/>
 				<ul class="lessons">
@@ -75,7 +83,7 @@ $(function() {
 	</ul>
 </div>
 
-<!-- Modal -->
+<!-- Modal for New Section -->
 <div class="modal fade" id="newSectionModal" tabindex="-1" role="dialog" aria-labelledby="newSectionModalLabel">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
@@ -94,6 +102,31 @@ $(function() {
 				<div class="modal-footer">
 	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
 	        <%= f.submit "Add a section", :class => 'btn btn-primary' %>
+      	</div>
+    	<% end %>
+    </div>
+  </div>
+</div>
+
+<!-- Modal for New Lesson -->
+<div class="modal fade" id="newLessonModal" tabindex="-1" role="dialog" aria-labelledby="newLessonModalLabel">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+        <h4 class="modal-title" id="newLessonModalLabel">Add a new lesson</h4>
+      </div>
+      <%= simple_form_for @lesson, :url => "#", :html => {id: 'newLessonForm'} do |f| %>
+      	<div class="modal-body">
+					<%= f.input :title %>
+					<%= f.input :subtitle %>
+					<%= f.input :video %>
+					<br/>
+					<br/>
+				</div>
+				<div class="modal-footer">
+	        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+	        <%= f.submit "Add a lesson", :class => 'btn btn-primary' %>
       	</div>
     	<% end %>
     </div>
