--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -16,13 +16,26 @@
 </div>
 <br/>
 <div class="col-xs-10 col-xs-offset-1 features text-center">
-	<div class="col-sm-4"
+	<br/>
+	<div class="col-sm-4">
+		<br/>
+		<br/>
 		<h3>On Your Time</h3>
+		<br/>
+		<span class="glyphicon glyphicon-time feature"></span>
 	</div>
-	<div class="col-sm-4"
+	<div class="col-sm-4">
+		<br/>
+		<br/>
 		<h3>Where You Want</h3>
+		<br/>
+		<span class="glyphicon glyphicon-road feature"></span>
 	</div>
-	<div class="col-sm-4"
+	<div class="col-sm-4">
+		<br/>
+		<br/>
 		<h3>For the Right Price</h3>
+		<br/>
+		<span class="glyphicon glyphicon-usd feature"></span>
 	</div>
 </div>
